--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myweb",
-  "homepage": "https://monto8790.github.io/myproject",
+  "name": "myproject",
+  "homepage": "https://monto8790.github.io/myproject/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +12,6 @@
     "@uppy/dropbox": "^2.0.7",
     "@uppy/react": "^2.2.2",
     "antd": "^4.21.4",
-    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-image-gallery": "^1.2.8",
@@ -24,7 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
